<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_bringup</name>
  <version>0.0.1</version>
  <description>
    Launch package for the turtlesim bringup exercise.
    Demonstrates how to integrate launch files into a ROS 2 Python package.
  </description>
  <maintainer email="you@ksu.edu">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>turtlesim</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
